# msc-backend

./: .gitattributes  .gitignore  README.md  app.py  app.wsgi  final-classifier-2.tar.xz  final-classifier.tar.xz  pyproject.toml  requirements.txt
