[tool.poetry]
name = "thesis-server"
version = "0.1.0"
description = "The server end for the division project extension."
authors = ["Stuart Leitch <Toruitas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastai = "2.0.18"
flask = "^1.1.2"
flask_cors = "^3.0.9"
spacy = "2.3.1"
IPython = "^7.19.0"
torch = "1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
